# greenhouse_sim

./: .gitignore  CMakeLists.txt  README.md
config/: greenhouse_gmapping.rviz  (+1 more)
greenhouse_sim/: package.xml
greenhouse_sim/launch/: amcl.launch  greenhouse_bringup.launch  greenhouse_demo.launch  greenhouse_gmapping.launch  greenhouse_hector.launch  greenhouse_hri_system.launch  greenhouse_navigation.launch  leg_tracking.launch  move_base.launch  pepper_control_trajectory.launch
greenhouse_sim/maps/: my_map.pgm
greenhouse_sim/models/crop_row_5x5/: model.config
greenhouse_sim/models/greenhouse/: model.sdf
greenhouse_sim/models/greenhouse_wall/: model.config  model.sdf
greenhouse_sim/models/human_actor/: model.config  model.sdf
greenhouse_sim/models/plant_cactus/: model.config
greenhouse_sim/models/plant_chrysanthemum/: model.config
greenhouse_sim/models/plant_hydrangea/: model.config  model.sdf
greenhouse_sim/models/plant_lily/: model.config
greenhouse_sim/models/plant_rose/: model.config
greenhouse_sim/models/plant_sunflower/: model.sdf
greenhouse_sim/param/: costmap_common_params.yaml  gmapping_params.yaml  teb_local_planner_params.yaml
greenhouse_sim/scripts/: greenhouse_smach.py  manual_ros_test.py  speech.py  test_new_features.py  test_tour_navigation.py  train_model.py
greenhouse_sim/scripts/modules/: navigation_manager.py  people_msg_converter.py  perception_manager.py  waypoint_manager.py
greenhouse_sim/urdf/pepper1.0_generated_urdf/: pepperGazebo.xacro  pepper_legs.xacro  pepper_robot.xacro  pepper_sensors.xacro  pepper_torso.xacro
(+46 files in other folders)
